--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@xyflow/react": "^12.5.4",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
